Drawer and desktop layout fixes: * Fixed menu dragging broke sometimes when returned from the editor. Menu's display was set to none and never returned to initial. Simplified visibility changing and use classes instead of HTMLElement.style. * Using visibility: hidden instead of display: none to hide menu so that it does not collapse may have fixed issues with wrong click position in desktop layout. Call DrawerService.open prior executing callbacks when editor is opened after menu is closed might help something as well - it is the proper order anyway.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -34,6 +34,17 @@ TODO: em grid structure explained in plain English (when new grid structure deci
 
 // FIXME:
 //   i. move
+// 1. Hide - but do not collapse - menu when editor is open.
+// 2. Hide editor when it is not open.
+.container-main {
+  &.editor-show .container-menu {
+    visibility: hidden; // [1]
+  }
+  &:not(.editor-show) .container-editor {
+    display: none;  // [2]
+  }
+}
+// FIXME
 //  ii. overflow: hidden causes flicker in vertical swiper (focus/tasks)
 // 1. Minimize paint when editor is open and .container-master and .container-menu are stacked beneath.
 //    At least absolutely positioned elements inside these classes would repaint and slow down swiping in
